--- a/.vim/userautoload/dein/plugins.toml
+++ b/.vim/userautoload/dein/plugins.toml
@@ -98,3 +98,7 @@ hook_add = 'source ~/.vim/userautoload/plugins/plugin-incsearch.vim'
 [[plugins]]
 repo = 'easymotion/vim-easymotion'
 hook_add = 'source ~/.vim/userautoload/plugins/plugin-vim-easymotion.vim'
+
+# enable multi cursors
+[[plugins]]
+repo = 'terryma/vim-multiple-cursors'
